# ChovEngine

./: .clang-format  .gitignore  CMakeLists.txt  log.txt  vcpkg.json
include/: application.h  demo_game.h  game.h  tiny_obj_loader.h
include/objects/: camera.h  game_object.h  game_object_batch.h  lights.h  object_manager.h  scene.h  transform.h
include/rendering/: camera.h  context.h  material.h  mesh.h  pipeline_builder.h  renderer.h  shader.h  swapchain.h  texture.h  window.h
include/rendering/opengl/: pipeline.h  render_object.h  renderer.h  shader.h  shader_allocator.h  shader_flags.h  texture.h  texture_allocator.h  uniform.h
include/rendering/vulkan/: allocator.h  buffer.h  context.h  image.h  pipeline_builder.h  render_info.h  shader.h  swapchain.h  texture.h  vulkan_renderer.h
include/utils/: logging.h
include/windowing/: events.h  window.h
models/: cube.mtl  sponza.mtl
models/bricks/: plane.mtl  plane2.mtl
models/nanosuit/: nanosuit.mtl
shaders/: depth_map.frag  depth_map.vert  render_shader.frag  render_shader.vert
shaders/vulkan/: vulkan_shader.frag  vulkan_shader.vert
src/: application.cpp  demo_game.cpp  game.cpp  main.cpp
src/objects/: game_object.cpp  object_manager.cpp  scene.cpp
src/rendering/: camera.cpp  context.cpp  libraries_initializer.cpp  main.cpp  mesh.cpp  pipeline_builder.cpp  shader.cpp  swapchain.cpp  window.cpp
src/rendering/opengl/: pipeline.cpp  render_object.cpp  renderer.cpp  shader.cpp  shader_allocator.cpp  texture.cpp  texture_allocator.cpp  uniform.cpp
src/rendering/vulkan/: allocator.cpp  buffer.cpp  context.cpp  image.cpp  libraries_initializer.cpp  pipeline_builder.cpp  shader.cpp  swapchain.cpp  texture.cpp  vulkan_renderer.cpp
src/utils/: logging.cpp
src/windowing/: events.cpp  window.cpp
